--- a/15boxDance.html
+++ b/15boxDance.html
@@ -11,24 +11,113 @@
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="10boxBody1.html">↩️undo</a>      
+            <a href="4boxAre.html">↩️undo</a>      
             <!--<a>↪️redo</a>-->
         </div> 
-    <h3>Chakras are like flower vortexes
+    <h3>
+        Here is a dance game to keep the body energised and in balance
+        <br> <br>
+        <a href="21nameRoot.html" id="danceRoot">Root</a>
         <br>
-        Chakras connect us to our holographic self
+        <a href="22nameSacral.html" id="danceSacral">Sacral</a>
         <br>
-        Here is a sample program to keep the body energised and balance
+        <a href="23namePlexus.html" id="dancePlexus">Plexus</a>
         <br>
-        <a href="21nameRoot.html">Root</a>
+        <a href="24nameHeart.html" id="danceHeart">Heart</a>
+
+        <h3>Chakras are like flower vortexes
         <br>
-        <a href="22nameSacral.html">Sacral</a>
-        <br>
-        <a href="23namePlexus.html">Plexus</a>
-        <br>
-        <a href="24nameHeart.html">Heart</a>
+        visualized as <br> a circular movement of energy <br>
+        rotating at a particular rate of vibration<br>
+        they distribute the life force energy <br> to our
+        ethereal/ holographic body <br> and
+        supply power to the different organs
+
     </h3>
     </div>
 
 </body>
+<script>
+
+//codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+//asignar un nombre con una variable para cada id
+const myButton1 = document.getElementById("danceRoot")
+
+myButton1.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelChakra", [1]);
+});
+
+const myButton2 = document.getElementById("danceSacral")
+
+myButton2.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelChakra", [2]);
+});
+
+const myButton3 = document.getElementById("dancePlexus")
+
+myButton3.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelChakra", [3]);
+});
+
+const myButton4 = document.getElementById("danceHeart")
+
+myButton4.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelChakra", [4]);
+});
+
+</script>
 </html>
