--- a/14boxSoul.html
+++ b/14boxSoul.html
@@ -11,17 +11,79 @@
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="10boxBody1.html">↩️undo</a>      
+            <a href="4boxAre.html">↩️undo</a>      
             <!--<a>↪️redo</a>-->
         </div> 
-    <h3>Congratulations! you have reach the end of the Internet.
-Formless Divinity !!
-<br>
-its time to <a href="15boxDance.html">Dance</a>
+    <h3>
+      Just as the seed contains all the qualities of the tree, <br>the Atma or individual soul, has all the qualities of the Supreme Self.<br>   
+            
+<br> <a href="15boxDance.html" id="soul1">Explore dance</a> of transformation towards the Self. Innermost radiant essence of a living entity.
     </h3>
     </div>
 
 </body>
+<script>
+
+//codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+//asignar un nombre con una variable para cada id
+const myButton1 = document.getElementById("soul1")
+
+myButton1.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelsoul", [1]);
+});
+
+</script>
 </html>
 
 
