--- a/17nameFreeze.html
+++ b/17nameFreeze.html
@@ -21,22 +21,81 @@
         <body>
             <div class="container">
                 <div class="arrows">   
-                    <a href="16boxLooping.html">↩️undo</a>    
+                    <a href="16boxLooping.html">↩️ back</a>    
                 </div> 
             <h3>FREEZE
                 <br>
-                Immobilization, dissociation, numbness. Repeating due to mental fog <a href="21nameRoot.html">Balance Root</a>
-                Powerlessness, stuck identity <a href="22nameSacral.html">Balance Plexus</a>
-                Closed heart, inability to receive love <a href="24nameHeart.html">Balance Heart</a>
+                -Immobilization, dissociation, numbness. <br>-Repeating due to mental fog.<br>-Powerlessness, stuck identity 
+                <br>-Closed heart, inability to receive love <br> 
+                <br>you have the power to change the story.
+                This dance can help you out,
+                <a href="15boxDance.html" id="freeze1">find balance</a> <br>Transform some negative impressions and replace them with positive ones 
             </h3>
-        
             </div>
         
-        </body>
-        </html>
-    </h3>
-
-    </div>
 
 </body>
+<script>
+
+        //codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+//asignar un nombre con una variable para cada id
+const myButton1 = document.getElementById("freeze1")
+
+myButton1.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelFreeze", [1]);
+});
+
+
+</script>
 </html>
