--- a/21nameRoot.html
+++ b/21nameRoot.html
@@ -21,16 +21,16 @@
         <body>
             <div class="container">
                 <div class="arrows">   
-                    <a href="15boxDance.html">↩️undo</a>    
+                    <a href="15boxDance.html">↩️back</a>    
                     
                 </div>  
             <h3>
-                Root
+                ROOT
                 <br>
-Safety, grounding, survival
-Stomping & Shaking Dance Barefoot grounding, strong legs, stomps, bouncing, squats. Visualize rooting into earth.
-<br>
-✅ <a href="25boxOutroRestart.html">Reclaims</a> primal power safely and grounds it.
+Safety, grounding, survival<br><br>
+Move:<br>-Stomping & Shaking Dance<br> -Barefoot grounding, strong legs, stomps, bouncing, squats. <br>-Visualize rooting into earth.
+<br><br>
+✅ <a href="25boxOutroRestart.html" id="outro">Reclaims</a> primal power safely and grounds it.
             </h3>
         
             </div>
@@ -38,8 +38,69 @@ Stomping & Shaking Dance Barefoot grounding, strong legs, stomps, bouncing, squa
         </body>
         </html>
     </h3>
-
     </div>
 
-</body>
+<body>
+
+<script>
+    //codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+//asignar un nombre con una variable para cada id
+const myButton = document.getElementById("outro")
+
+myButton.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelOut", [1]);
+});
+
+</script>
 </html>
