--- a/23namePlexus.html
+++ b/23namePlexus.html
@@ -10,15 +10,79 @@
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="15boxDance.html">↩️undo</a>  
+            <a href="15boxDance.html">↩️back</a>  
         </div>   
-    <h3>Plexus
+    <h3>PLEXUS
         <br>
-        Power, will, self-worth
-        Power Poses & Martial Dance Punching air, strong warrior stances, solar breath (inhale arms up, exhale push down), core activation.
-        ✅ Gently <a href="25boxOutroRestart.html">melts</a> paralysis and reclaims vitality
+        Power, will, self-worth <br><br>
+        Move:<br>-Power Poses & Martial Dance <br>-Punching air, strong warrior poses <br>-Solar breath (inhale arms up, exhale push down), core activation.<br>
+        <br>✅ Gently <a href="25boxOutroRestart.html" id="outro">melts</a> paralysis and reclaims vitality
     </h3>
     </div>
 
 </body>
+
+
+<script>
+
+        //codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+//asignar un nombre con una variable para cada id
+const myButton = document.getElementById("outro")
+
+myButton.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelOut", [1]);
+});
+
+</script>
 </html>
