--- a/25boxOutroRestart.html
+++ b/25boxOutroRestart.html
@@ -9,12 +9,82 @@
 </head>
 <body>
     <div class="container">
-    <h3>you have transformed your negative impressions
-        and replace with positive ones
+    <h3> This is the End of the Internet <br> 
+      Congratulations !!! <br>
+      you have scrolled all the Pages,<br>
+      you are LED LIGHT :-)<br> <br>
+      One step closer to Formless Divinity <br>
+      
+
         <br>
-        <a href="1start1.html">Reset</a>
+        <a href="1start1.html" id="outro2">Reset</a>
     </h3>
     </div>
 
 </body>
+
+
+<script>
+
+        //codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+//asignar un nombre con una variable para cada id
+const myButton = document.getElementById("outro2")
+
+myButton.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelOut", [2]);
+});
+
+</script>
+
 </html>
