--- a/2start2.html
+++ b/2start2.html
@@ -75,7 +75,7 @@ console.log("Sent OSC:", address, values);
 const myButton = document.getElementById("btn")
   myButton.addEventListener("click", function (e) {
   console.log("Button clicked:", e.currentTarget.className);
-sendOSC("/test", [25]);
+sendOSC("/levelIntro", [2]);
 });
 
 </script>
