--- a/3boxFeel.html
+++ b/3boxFeel.html
@@ -18,8 +18,7 @@ It is not about beauty choreography
 to <a href="#" id="makeVisible">show</a>  
     </h3>
     <div  id="boxFeel2" style="visibility: hidden;">
-        <h3>ourselves
-            with the most a suitable body
+        <h3>ourselves with the most suitable body,
             you dance as you <a href="4boxAre.html" id="makeVisible2">are</a></h3>
     </div>
     <div id="boxFeel2">
@@ -55,5 +54,72 @@ const hide = document.getElementById('hideText')
 
     const f = document.getElementById('makeVisible2')
     
+
+//codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+const myButton = document.getElementById("makeVisible")
+
+myButton.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelIntro", [3]);
+});
+
+const myButton2 = document.getElementById("makeVisible2")
+
+myButton2.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelIntro", [4]);
+});
+
     </script>
 </html>
