--- a/4boxAre.html
+++ b/4boxAre.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <div class="arrows">   
-    <a href="3boxFeel.html" id="hideText">↩️undo</a>    
+    <a href="1start1.html" id="hideText">↩️intro</a>    
     </div>  
 <h3>
 What is this dance?
@@ -19,16 +19,100 @@ It is not just bare movement
 <br>
 it's not from the mind, 
 <br>
-you are not a <a href="6boxPC1.html">computer</a>
+you are not a <a href="6boxPC1.html" id="are1">computer</a>
 <br>
-when you dance <a href="10boxBody1.html">body shape</a> doesn't matter
+when you dance <a href="10boxBody1.html" id="are2">body shape</a> doesn't matter,
 <br>
-its about celebration, a party for <a href="14boxSoul.html">soul</a>
+its about celebration, <br>a party for the <a href="14boxSoul.html" id="are3">soul</a>
 <br>
-its not about pleasing who is <a href="5boxWatching.html">watching</a> 
+its not about pleasing who is <a href="5boxWatching.html" id="are4">watching</a> 
 
     </h3>
     </div>
 
 </body>
+<script>
+
+//codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+//asignar un nombre con una variable para cada id
+const myButton = document.getElementById("are1")
+
+myButton.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelAre", [1]);
+});
+
+//asignar un nombre con una variable para cada id
+const myButton2 = document.getElementById("are2")
+
+myButton2.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelAre", [2]);
+});
+
+const myButton3 = document.getElementById("are3")
+
+myButton3.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelAre", [3]);
+});
+
+const myButton4 = document.getElementById("are4")
+
+myButton4.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelAre", [4]);
+});
+
+</script>
 </html>
