--- a/5boxWatching.html
+++ b/5boxWatching.html
@@ -12,14 +12,74 @@
     <div class="arrows">   
         <a href="4boxAre.html" id="hideText">↩️undo</a>    
         </div>   
-<h3>we all need to be more comfortable
+<h3>we all need to be more comfortable <br>
 and letting go
-and looking silly, risking more
-and being more willing to fail
-specially when the only thing at risk is our ego
-try to <a href="2start2.html">Dance</a>
+and looking silly, <br><a href="4boxAre.html" id="watch1"> risking</a> more
+and <br>being more willing to fail <br>
+specially when the only thing at risk is our ego 
     </h3>
     </div>
 
 </body>
+<script>
+    //codigo para enviar osc
+let oscPort;
+   
+oscPort = new osc.WebSocketPort({
+  url: "ws://localhost:9000", // same as your Node.js server
+  metadata: true
+});
+oscPort.open();
+
+oscPort.on("ready", () => {
+  console.log("Connected to OSC WebSocket!");
+});
+
+oscPort.on("open", () => {
+  console.log("✅ WebSocket connected to Node.js server");
+});
+
+if (oscPort && oscPort.readyState === WebSocket.OPEN) {
+  oscPort.send({
+    address: "/address",
+    args: [
+      {
+        type: "f", // float
+        value: 123.4
+      },
+      {
+        type: "s", // string
+        value: "hello"
+      }
+    ]
+  });
+}
+
+
+function sendOSC(address, values) {
+
+const args = values.map((v) => {
+if (typeof v === "number") {
+  return { type: "f", value: v }; // float
+} else if (typeof v === "string") {
+  return { type: "s", value: v }; // string
+} else {
+  return { type: "s", value: String(v) };
+}
+});
+
+oscPort.send({ address, args });
+console.log("✅ Sent OSC:", address, args);
+console.log("Sent OSC:", address, values);
+}
+
+//asignar un nombre con una variable para cada id
+const myButton = document.getElementById("watch1")
+
+myButton.addEventListener("click", function (e) {
+  console.log("Button clicked:", e.currentTarget.className);
+sendOSC("/levelIntro", [5]);
+});
+
+</script>
 </html>
