--- a/10boxBody1.html
+++ b/10boxBody1.html
@@ -33,7 +33,7 @@ electrons, protons and neutrons
 </h3>
 </div> 
 <div id="body3" style="visibility: hidden;">
- <h3>It doesn’t matter how you look. Everyone have their own Mandala of the body.
+ <h3>It doesn’t matter how you look. You are enough.
 </h3>   
 </div>
 </div>    
