--- a/14boxSoul.html
+++ b/14boxSoul.html
@@ -15,9 +15,12 @@
             <!--<a>↪️redo</a>-->
         </div> 
     <h3>
-      Just as the seed contains all the qualities of the tree, <br>the Atma or individual soul, has all the qualities of the Supreme Self.<br>   
-            
-<br> <a href="15boxDance.html" id="soul1">Explore dance</a> of transformation towards the Self. Innermost radiant essence of a living entity.
+      Just as the seed contains all the qualities of the plant, the individual soul, has all the qualities of the Supreme Self.<br><br>   
+      Be like the Lotus Flower; trust in the light, surpass the mud, believe in new beginnings whenever you doubt your self-worth.      
+<br><br> <a href="15boxDance.html" id="soul1">Explore dance</a> of transformation. 
+
+
+
     </h3>
     </div>
 
