--- a/15boxDance.html
+++ b/15boxDance.html
@@ -15,8 +15,9 @@
             <!--<a>↪️redo</a>-->
         </div> 
     <h3>
-        Here is a dance game to keep the body energised and in balance
-        <br> <br>
+        Here is a dance game to find balance and keep the body energised: 
+        <br>-Chakras are like flower vortexes with circular movement of energy <br>
+        <br> 
         <a href="21nameRoot.html" id="danceRoot">Root</a>
         <br>
         <a href="22nameSacral.html" id="danceSacral">Sacral</a>
@@ -25,13 +26,10 @@
         <br>
         <a href="24nameHeart.html" id="danceHeart">Heart</a>
 
-        <h3>Chakras are like flower vortexes
-        <br>
-        visualized as <br> a circular movement of energy <br>
-        rotating at a particular rate of vibration<br>
-        they distribute the life force energy <br> to our
-        ethereal/ holographic body <br> and
-        supply power to the different organs
+        <h3>
+        -Visualize transforming some negative impressions and replace them with positive ones. <br> -Chakras distribute the life force energy to our
+        ethereal/ holographic body and
+        supply power to the different organs.
 
     </h3>
     </div>
