--- a/17nameFreeze.html
+++ b/17nameFreeze.html
@@ -25,11 +25,11 @@
                 </div> 
             <h3>FREEZE
                 <br>
-                -Immobilization, dissociation, numbness. <br>-Repeating due to mental fog.<br>-Powerlessness, stuck identity 
+                -Immobilization, dissociation, numbness <br>-Repeating due to mental fog <br>-Powerlessness, stuck identity 
                 <br>-Closed heart, inability to receive love <br> 
                 <br>you have the power to change the story.
                 This dance can help you out,
-                <a href="15boxDance.html" id="freeze1">find balance</a> <br>Transform some negative impressions and replace them with positive ones 
+                <a href="15boxDance.html" id="freeze1">find balance.</a> No Mud, No Lotus Flower. 
             </h3>
             </div>
         
