--- a/18nameFight.html
+++ b/18nameFight.html
@@ -20,7 +20,7 @@
 
       <br><br>you have the power to change the story.
                 This dance can help you out,
-                <a href="15boxDance.html" id="fight1">find balance</a> 
+                <a href="15boxDance.html" id="fight1">find balance.</a> No Mud, No Lotus Flower. 
 
     </h3>
     </div>
