--- a/25boxOutroRestart.html
+++ b/25boxOutroRestart.html
@@ -13,9 +13,10 @@
       Congratulations !!! <br>
       you have scrolled all the Pages,<br>
       you are LED LIGHT :-)<br> <br>
-      One step closer to Formless Divinity <br>
       
-
+      Step by step, you are closer to <br> Formless Divinity
+      <br>may all beings in all the worlds<br>be happy and free.<br>
+      
         <br>
         <a href="1start1.html" id="outro2">Reset</a>
     </h3>
