--- a/3boxFeel.html
+++ b/3boxFeel.html
@@ -17,8 +17,8 @@
 It is not about beauty choreography
 to <a href="#" id="makeVisible">show</a>  
     </h3>
-    <div  id="boxFeel2" style="visibility: hidden;">
-        <h3>ourselves with the most suitable body,
+    <div id="boxFeel2" style="visibility: hidden;">
+        <h3>ourselves, with the most suitable body,
             you dance as you <a href="4boxAre.html" id="makeVisible2">are</a></h3>
     </div>
     <div id="boxFeel2">
