--- a/5boxWatching.html
+++ b/5boxWatching.html
@@ -16,7 +16,7 @@
 and letting go
 and looking silly, <br><a href="4boxAre.html" id="watch1"> risking</a> more
 and <br>being more willing to fail <br>
-specially when the only thing at risk is our ego 
+specially when the only thing at risk is our ego. 
     </h3>
     </div>
 
