--- a/14boxSoul.html
+++ b/14boxSoul.html
@@ -1,23 +1,23 @@
 
-<!DOCTYPE html>
+<h3><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/osc/dist/osc-browser.min.js"></script>
     <link href='style.css' rel='stylesheet'>
-    <title>End of Internet</title>
+    <title>This is the End of the Internet</title>
 </head>
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="4boxAre.html">↩️undo</a>      
+            <a href="4boxAre.html" id="menuAre">↩️undo</a>      
             <!--<a>↪️redo</a>-->
         </div> 
     <h3>
-      Just as the seed contains all the qualities of the plant, the individual soul, has all the qualities of the Supreme Self.<br><br>   
-      Be like the Lotus Flower; trust in the light, surpass the mud, believe in new beginnings whenever you doubt your self-worth.      
-<br><br> <a href="15boxDance.html" id="soul1">Explore dance</a> of transformation. 
+      Infinite Soul <br><br>   
+      Be like the Lotus Flower; trust in the Light, surpass the mud, believe in new beginnings whenever you doubt your self-worth.      
+<br><br> <a href="15boxDance.html" id="soul1">MAKE THE MOVE</a> The Universe respons to movement. 
 
 
 
@@ -25,68 +25,7 @@
     </div>
 
 </body>
-<script>
 
-//codigo para enviar osc
-let oscPort;
-   
-oscPort = new osc.WebSocketPort({
-  url: "ws://localhost:9000", // same as your Node.js server
-  metadata: true
-});
-oscPort.open();
-
-oscPort.on("ready", () => {
-  console.log("Connected to OSC WebSocket!");
-});
-
-oscPort.on("open", () => {
-  console.log("✅ WebSocket connected to Node.js server");
-});
-
-if (oscPort && oscPort.readyState === WebSocket.OPEN) {
-  oscPort.send({
-    address: "/address",
-    args: [
-      {
-        type: "f", // float
-        value: 123.4
-      },
-      {
-        type: "s", // string
-        value: "hello"
-      }
-    ]
-  });
-}
-
-
-function sendOSC(address, values) {
-
-const args = values.map((v) => {
-if (typeof v === "number") {
-  return { type: "f", value: v }; // float
-} else if (typeof v === "string") {
-  return { type: "s", value: v }; // string
-} else {
-  return { type: "s", value: String(v) };
-}
-});
-
-oscPort.send({ address, args });
-console.log("✅ Sent OSC:", address, args);
-console.log("Sent OSC:", address, values);
-}
-
-//asignar un nombre con una variable para cada id
-const myButton1 = document.getElementById("soul1")
-
-myButton1.addEventListener("click", function (e) {
-  console.log("Button clicked:", e.currentTarget.className);
-sendOSC("/levelsoul", [1]);
-});
-
-</script>
 </html>
 
 
