--- a/15boxDance.html
+++ b/15boxDance.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/osc/dist/osc-browser.min.js"></script>
     <link href='style.css' rel='stylesheet'>
-    <title>End of Internet</title>
+    <title>This is the End of the Internet</title>
 </head>
 <body>
     <div class="container">
@@ -15,107 +15,24 @@
             <!--<a>↪️redo</a>-->
         </div> 
     <h3>
-        Here is a dance game to find balance and keep the body energised: 
-        <br>-Chakras are like flower vortexes with circular movement of energy <br>
+        Manifestation is a dance.<br><br>Here is a game to find balance: 
+        <br><br>-Chakras are like flower vortexes with circular movement of energy <br>
         <br> 
         <a href="21nameRoot.html" id="danceRoot">Root</a>
-        <br>
+        <br><br>
         <a href="22nameSacral.html" id="danceSacral">Sacral</a>
-        <br>
+        <br><br>
         <a href="23namePlexus.html" id="dancePlexus">Plexus</a>
-        <br>
+        <br><br>
         <a href="24nameHeart.html" id="danceHeart">Heart</a>
 
         <h3>
-        -Visualize transforming some negative impressions and replace them with positive ones. <br> -Chakras distribute the life force energy to our
-        ethereal/ holographic body and
-        supply power to the different organs.
+        -Visualize transforming some negative impressions and replace them with positive ones. <br><br> -Chakras distribute the life force energy to our
+        holographic body and different organs.
 
     </h3>
     </div>
 
 </body>
-<script>
 
-//codigo para enviar osc
-let oscPort;
-   
-oscPort = new osc.WebSocketPort({
-  url: "ws://localhost:9000", // same as your Node.js server
-  metadata: true
-});
-oscPort.open();
-
-oscPort.on("ready", () => {
-  console.log("Connected to OSC WebSocket!");
-});
-
-oscPort.on("open", () => {
-  console.log("✅ WebSocket connected to Node.js server");
-});
-
-if (oscPort && oscPort.readyState === WebSocket.OPEN) {
-  oscPort.send({
-    address: "/address",
-    args: [
-      {
-        type: "f", // float
-        value: 123.4
-      },
-      {
-        type: "s", // string
-        value: "hello"
-      }
-    ]
-  });
-}
-
-
-function sendOSC(address, values) {
-
-const args = values.map((v) => {
-if (typeof v === "number") {
-  return { type: "f", value: v }; // float
-} else if (typeof v === "string") {
-  return { type: "s", value: v }; // string
-} else {
-  return { type: "s", value: String(v) };
-}
-});
-
-oscPort.send({ address, args });
-console.log("✅ Sent OSC:", address, args);
-console.log("Sent OSC:", address, values);
-}
-
-//asignar un nombre con una variable para cada id
-const myButton1 = document.getElementById("danceRoot")
-
-myButton1.addEventListener("click", function (e) {
-  console.log("Button clicked:", e.currentTarget.className);
-sendOSC("/levelChakra", [1]);
-});
-
-const myButton2 = document.getElementById("danceSacral")
-
-myButton2.addEventListener("click", function (e) {
-  console.log("Button clicked:", e.currentTarget.className);
-sendOSC("/levelChakra", [2]);
-});
-
-const myButton3 = document.getElementById("dancePlexus")
-
-myButton3.addEventListener("click", function (e) {
-  console.log("Button clicked:", e.currentTarget.className);
-sendOSC("/levelChakra", [3]);
-});
-
-const myButton4 = document.getElementById("danceHeart")
-
-myButton4.addEventListener("click", function (e) {
-  console.log("Button clicked:", e.currentTarget.className);
-sendOSC("/levelChakra", [4]);
-});
-
-</script>
 </html>
