--- a/23namePlexus.html
+++ b/23namePlexus.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
+<h3><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/osc/dist/osc-browser.min.js"></script>
     <link href='style.css' rel='stylesheet'>
-    <title>End of Internet</title>
+    <title>This is the End of the Internet</title>
 </head>
 <body>
     <div class="container">
         <div class="arrows">   
-            <a href="15boxDance.html">↩️back</a>  
+            <a href="15boxDance.html" id="menuChakra">↩️back</a>  
         </div>   
     <h3>PLEXUS
         <br>
         Power, will, self-worth <br><br>
-        Move:<br>-Power Poses & Martial Dance <br>-Punching air, strong warrior poses <br>-Solar breath (inhale arms up, exhale push down), core activation.<br>
+        Move:<br>-Power Poses & Martial Dance <br><br>-Punching air, strong warrior poses <br><br>-Solar breath (inhale arms up, exhale push down), core activation.<br><br>
         <br>✅ Gently <a href="25boxOutroRestart.html" id="outro">melts</a> paralysis and reclaims vitality
     </h3>
     </div>
@@ -23,66 +23,4 @@
 </body>
 
 
-<script>
-
-        //codigo para enviar osc
-let oscPort;
-   
-oscPort = new osc.WebSocketPort({
-  url: "ws://localhost:9000", // same as your Node.js server
-  metadata: true
-});
-oscPort.open();
-
-oscPort.on("ready", () => {
-  console.log("Connected to OSC WebSocket!");
-});
-
-oscPort.on("open", () => {
-  console.log("✅ WebSocket connected to Node.js server");
-});
-
-if (oscPort && oscPort.readyState === WebSocket.OPEN) {
-  oscPort.send({
-    address: "/address",
-    args: [
-      {
-        type: "f", // float
-        value: 123.4
-      },
-      {
-        type: "s", // string
-        value: "hello"
-      }
-    ]
-  });
-}
-
-
-function sendOSC(address, values) {
-
-const args = values.map((v) => {
-if (typeof v === "number") {
-  return { type: "f", value: v }; // float
-} else if (typeof v === "string") {
-  return { type: "s", value: v }; // string
-} else {
-  return { type: "s", value: String(v) };
-}
-});
-
-oscPort.send({ address, args });
-console.log("✅ Sent OSC:", address, args);
-console.log("Sent OSC:", address, values);
-}
-
-//asignar un nombre con una variable para cada id
-const myButton = document.getElementById("outro")
-
-myButton.addEventListener("click", function (e) {
-  console.log("Button clicked:", e.currentTarget.className);
-sendOSC("/levelOut", [1]);
-});
-
-</script>
 </html>
