--- a/2start2.html
+++ b/2start2.html
@@ -20,5 +20,6 @@ that allows us to affirm ourselves as we <a href="3boxFeel.html" id="btn">feel</
     </div>
 
 </body>
-
+<script>
+</script>
 </html>
