--- a/4boxAre.html
+++ b/4boxAre.html
@@ -31,5 +31,8 @@ its not about pleasing who is <a href="5boxWatching.html" id="are4">watching</a>
     </div>
 
 </body>
+<script>
 
+
+</script>
 </html>
