--- a/6boxPC1.html
+++ b/6boxPC1.html
@@ -42,5 +42,29 @@ with practice you can excel the power of the mind<br>
     </div>
 
 </body>
+<script>
+    const e = document.getElementById('makeVisible');
+    const tex = document.getElementById('boxPC2');
+    
+    e.addEventListener("click", function () {
+    tex.style.visibility  = "visible";
+    });
+    
+    const f = document.getElementById('makeVisible2');
+    const tex2 = document.getElementById('boxPC3');
 
+    f.addEventListener("click", function () {
+    tex2.style.visibility  = "visible";
+    });
+
+    const g = document.getElementById('makeVisible3');
+    const tex3 = document.getElementById('boxPC4');
+
+    g.addEventListener("click", function () {
+    tex3.style.visibility  = "visible";
+    });
+
+
+
+</script>
 </html>
